--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -523,6 +523,14 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\actionbar_trash.png" />
     <AndroidResource Include="Resources\Anim\gridviewoptions_fade_in.xml" />
     <AndroidResource Include="Resources\Anim\gridviewoptions_fade_out.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\miniplayer_chevronleft.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\miniplayer_chevronright.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\miniplayer_chevronleft.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\miniplayer_chevronright.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\miniplayer_chevronleft.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\miniplayer_chevronright.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\miniplayer_chevronleft.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\miniplayer_chevronright.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
