Android: Added album art of each artist in Artist cell in MobileLibraryBrowser. It is way faster than I thought with a gradient over album art. The content isn't 100% dynamic yet. Several layout bug fixes throughout the app.
Related to issue #406.

--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -543,6 +543,7 @@
     <AndroidResource Include="Resources\drawable-xhdpi\miniplayer_chevronright.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\miniplayer_chevronleft.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\miniplayer_chevronright.png" />
+    <AndroidResource Include="Resources\drawable\listgradient_selector.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
