--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -544,6 +544,7 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\miniplayer_chevronleft.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\miniplayer_chevronright.png" />
     <AndroidResource Include="Resources\drawable\listgradient_selector.xml" />
+    <AndroidResource Include="Resources\Anim\scale_test.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\armeabi\" />
