--- a/MPfm/MPfm.Library/packages.config
+++ b/MPfm/MPfm.Library/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="sqlite-net" version="1.0.7" targetFramework="wp80" />
+  <package id="sqlite-net" version="1.0.7" targetFramework="win" />
 </packages>
