WindowsStore: MPfm.MVP now builds correctly. It is still missing some implementations though. Removed Library and ILibrary from MPfm.Library; these legacy classes are no longer used since Windows uses the new MVP architecture. The methods for database creation have been moved into InitializationService.
Related to issue #423.

--- a/MPfm/MPfm.Library/MPfm.Library.WindowsPhone.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.WindowsPhone.csproj
@@ -138,8 +138,8 @@
     <Compile Include="Objects\LibraryQuery.cs" />
     <Compile Include="Messages\AudioFileCacheUpdatedMessage.cs" />
     <Compile Include="Objects\SyncDevice.cs" />
-    <Compile Include="ISyncDeviceSpecifications.cs" />
-    <Compile Include="Services\UpdateLibraryService.cs" />
+    <Compile Include="ISyncDeviceSpecifications.cs" />    
+	<Compile Include="Services\WinRT\UpdateLibraryService.cs" />	
     <Compile Include="Services\Interfaces\IUpdateLibraryService.cs" />
     <Compile Include="Services\Events\ProcessEndedEventArgs.cs" />
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
