--- a/MPfm/MPfm.Library/MPfm.Library.WindowsPhone.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.WindowsPhone.csproj
@@ -111,15 +111,16 @@
     <Compile Include="Database\Interfaces\ISQLiteGateway.cs" />
     <Compile Include="Database\DatabaseFacade.cs" />
     <Compile Include="Database\WinRTSQLiteGateway.cs" />
-    <Compile Include="ILibrary.cs" />
     <Compile Include="Objects\NetworkState.cs" />
     <Compile Include="Objects\PlaylistFile.cs" />
     <Compile Include="Objects\History.cs" />
     <Compile Include="Objects\Setting.cs" />
     <Compile Include="Database\SQLiteGateway.cs" />
     <Compile Include="Objects\Folder.cs" />
-    <Compile Include="Library.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\WinRT\SyncClientService.cs" />
+    <Compile Include="Services\WinRT\SyncDiscoveryService.cs" />
+    <Compile Include="Services\WinRT\SyncListenerService.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="SQLiteAsync.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
@@ -138,8 +139,8 @@
     <Compile Include="Objects\LibraryQuery.cs" />
     <Compile Include="Messages\AudioFileCacheUpdatedMessage.cs" />
     <Compile Include="Objects\SyncDevice.cs" />
-    <Compile Include="ISyncDeviceSpecifications.cs" />    
-	<Compile Include="Services\WinRT\UpdateLibraryService.cs" />	
+    <Compile Include="ISyncDeviceSpecifications.cs" />
+    <Compile Include="Services\WinRT\UpdateLibraryService.cs" />
     <Compile Include="Services\Interfaces\IUpdateLibraryService.cs" />
     <Compile Include="Services\Events\ProcessEndedEventArgs.cs" />
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
