--- a/MPfm/MPfm.MVP/MPfm.MVP.WindowsPhone.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.WindowsPhone.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5CA0AA57-8F15-4DC2-B5C6-25692F200869}</ProjectGuid>
+    <ProjectGuid>{FC1E0293-0863-4C96-A514-98B70C695DAC}</ProjectGuid>
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MPfm.Core</RootNamespace>
-    <AssemblyName>MPfm.Core</AssemblyName>
+    <RootNamespace>MPfm.MVP</RootNamespace>
+    <AssemblyName>MPfm.MVP</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
@@ -82,7 +82,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup />    
+  <ItemGroup>
+    <ProjectReference Include="..\MPfm.Core\MPfm.Core.WindowsPhone.csproj">
+      <Project>{5CA0AA57-8F15-4DC2-B5C6-25692F200869}</Project>
+      <Name>MPfm.Core.WindowsPhone</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MPfm.Library\MPfm.Library.WindowsPhone.csproj">
+      <Project>{317F03EF-9294-47D4-A915-7ABDC647897A}</Project>
+      <Name>MPfm.Library.WindowsPhone</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MPfm.Player\MPfm.Player.WindowsPhone.csproj">
+      <Project>{4ACC27D9-C476-4BCA-B5BE-F1A067B5E317}</Project>
+      <Name>MPfm.Player.WindowsPhone</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.WindowsPhone.csproj">
+      <Project>{591A3842-87BC-467F-AA99-42749C8DBFB3}</Project>
+      <Name>MPfm.Sound.WindowsPhone</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Messages\ConnectionStatusChangedMessage.cs" />
