--- a/MPfm/MPfm.Sound/MPfm.Sound.WindowsPhone.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.WindowsPhone.csproj
@@ -92,12 +92,13 @@
     <Compile Include="AudioFiles\AudioFileFormatExtensions.cs" />
     <Compile Include="AudioFiles\ConvertAudio.cs" />
     <Compile Include="AudioFiles\AudioFileFormat.cs" />
+    <Compile Include="BassNetWrapper\DriverType.cs" />
     <Compile Include="PeakFiles\PeakFileCorruptedException.cs" />
     <Compile Include="PeakFiles\PeakFileDoneData.cs" />
     <Compile Include="PeakFiles\PeakFileFormatIncompatibleException.cs" />
     <Compile Include="PeakFiles\PeakFileProgressData.cs" />
     <Compile Include="PeakFiles\PeakFileStartedData.cs" />
-	<Compile Include="PeakFiles\WinRT\PeakFileService.cs" />	
+    <Compile Include="PeakFiles\WinRT\PeakFileService.cs" />
     <Compile Include="Tags\APEMetadata.cs" />
     <Compile Include="Playlists\Playlist.cs" />
     <Compile Include="Playlists\PlaylistItem.cs" />
@@ -105,7 +106,7 @@
     <Compile Include="Playlists\PlaylistFileFormat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BassNetWrapper\Device.cs" />
-    <Compile Include="BassNetWrapper\Exception.cs" />	
+    <Compile Include="BassNetWrapper\Exception.cs" />
     <Compile Include="Tags\APETag.cs" />
     <Compile Include="Tags\SV7Metadata.cs" />
     <Compile Include="Tags\SV7Tag.cs" />
@@ -113,7 +114,7 @@
     <Compile Include="Tags\ID3v2Metadata.cs" />
     <Compile Include="Tags\SV8Tag.cs" />
     <Compile Include="Tags\SV8Metadata.cs" />
-    <Compile Include="PeakFiles\IPeakFileService.cs" />   
+    <Compile Include="PeakFiles\IPeakFileService.cs" />
     <Compile Include="Readers\XingInfoHeaderReader.cs" />
     <Compile Include="BassNetKey.cs" />
   </ItemGroup>
