--- a/MPfm/MPfm.Core/MPfm.Core.Android.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.Android.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Compile Include="Conversion.cs" />
     <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
+    <Compile Include="DatabaseFieldMap.cs" />
     <Compile Include="Extensions\DictionaryExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracing.cs" />
