--- a/MPfm/MPfm.Core/MPfm.Core.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Conversion.cs" />
     <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
+    <Compile Include="DatabaseFieldMap.cs" />
     <Compile Include="Extensions\DictionaryExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracing.cs" />
@@ -103,9 +104,7 @@
     <Compile Include="Normalizer.cs" />
     <Compile Include="Helpers\XMLHelper.cs" />
     <Compile Include="Network\IPAddressRangeFinder.cs" />
-    <Compile Include="Network\WebClientTimeout.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Network\WebClientTimeout.cs" />
     <Compile Include="XmlSerialization.cs" />
   </ItemGroup>
 </Project>
