--- a/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
+++ b/MPfm/MPfm.Core/MPfm.Core.iOS.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -151,8 +151,15 @@
     <Content Include="Lib\TinyIoC.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Lib\iOS\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Lib\iOS\TinyIoC.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Conversion.cs" />
     <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
+    <Compile Include="DatabaseFieldMap.cs" />
     <Compile Include="Extensions\DictionaryExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracing.cs" />
@@ -164,11 +171,5 @@
     <Compile Include="Network\IPAddressRangeFinder.cs" />
     <Compile Include="Network\WebClientTimeout.cs" />
     <Compile Include="XmlSerialization.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Lib\iOS\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Lib\iOS\TinyIoC.dll" />
   </ItemGroup>
 </Project>
