--- a/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
@@ -138,7 +138,7 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>Lib\iOS\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="TinyIoC.iOS">
+    <Reference Include="TinyIoC">
       <HintPath>..\MPfm.Core\Lib\iOS\TinyIoC.dll</HintPath>
     </Reference>
   </ItemGroup>
@@ -209,14 +209,13 @@
     <Compile Include="Database\Interfaces\IDatabaseFacade.cs" />
     <Compile Include="Database\Interfaces\ISQLiteGateway.cs" />
     <Compile Include="Database\DatabaseFacade.cs" />
-    <Compile Include="ILibrary.cs" />
+    <Compile Include="Objects\PlaylistAudioFile.cs" />
     <Compile Include="Objects\NetworkState.cs" />
     <Compile Include="Objects\PlaylistFile.cs" />
     <Compile Include="Objects\History.cs" />
     <Compile Include="Objects\Setting.cs" />
     <Compile Include="Database\SQLiteGateway.cs" />
     <Compile Include="Objects\Folder.cs" />
-    <Compile Include="Library.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
     <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
